--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               <div class="carousel-inner ">
                 <div class="carousel-item active">
                   <div class="row">
-                    <div class="col-lg-5 d-flex justify-content-center align-items-center">
+                    <div class="col-lg-5 col-sm-12 d-flex justify-content-center align-items-center pb-2">
                       <div>
                         <h5>New Trend</h5>
                         <h1>COLLUSION</h1>
@@ -72,14 +72,14 @@
                         <button class="btn btn-dark">SHOP NOW</button>
                       </div>
                     </div>
-                    <div class="col-lg-7 d-flex justify-content-end">
+                    <div class="col-lg-7 col-sm-12 d-flex justify-content-lg-end justify-content-sm-center">
                       <img src="images/banner-images/banner-1.png" class="d-block w-75" alt="...">
                     </div>
                   </div>
                 </div>
                 <div class="carousel-item">
                   <div class="row">
-                    <div class="col-lg-5 d-flex justify-content-center align-items-center">
+                    <div class="col-lg-5 col-sm-12 d-flex justify-content-center align-items-center pb-2">
                       <div>
                         <h5>New Trend</h5>
                         <h1>COLLUSION</h1>
@@ -88,14 +88,14 @@
                         <button class="btn btn-dark">SHOP NOW</button>
                       </div>
                     </div>
-                    <div class="col-lg-7 d-flex justify-content-end">
+                    <div class="col-lg-7 col-sm-12 d-flex justify-content-lg-end justify-content-sm-center">
                       <img src="images/banner-images/banner-2.png" class="d-block w-75" alt="...">
                     </div>
                   </div>
                 </div>
                 <div class="carousel-item">
                   <div class="row">
-                    <div class="col-lg-5 d-flex justify-content-center align-items-center">
+                    <div class="col-lg-5 col-sm-12 d-flex justify-content-center align-items-center pb-2">
                       <div>
                         <h5>New Trend</h5>
                         <h1>COLLUSION</h1>
@@ -104,7 +104,7 @@
                         <button class="btn btn-dark">SHOP NOW</button>
                       </div>
                     </div>
-                    <div class="col-lg-7 d-flex justify-content-end">
+                    <div class="col-lg-7 col-sm-12 d-flex justify-content-lg-end justify-content-sm-center">
                       <img src="images/banner-images/banner-3.png" class="d-block w-75" alt="...">
                     </div>
                   </div>
@@ -127,23 +127,23 @@
       <section class="container mb-5" id="categories">
         <h1 class="text-center mb-5">Categories</h1>
         <div class="row">
-          <div class="col-lg-6">
+          <div class="col-lg-6 ">
             <div class="row">
               <div class="col-lg-12">
                 <img src="images/categories-images/man-sitting.png" class="w-100" alt="">
               </div>
             </div>
               <div class="row">
-                <div class="col-lg-6">
+                <div class="col-lg-6 col-sm-12">
                   <img src="images/categories-images/girl-black-tshirt.png" class="h-100" alt="">
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6 col-sm-12">
                   <img src="images/categories-images/girl-black-tshirt.png" class="h-100" alt="">
                 </div>
               </div>
           </div>
           <div class="col-lg-6">
-            <img src="images/categories-images/man-standing.png" alt="" height="554px">
+            <img src="images/categories-images/man-standing.png" alt="" class="mw-100" height="554px">
           </div>
         </div>
       </section>
@@ -266,7 +266,7 @@
         <p class="text-center">Choose Your Favorite Color</p>
         <div class="row">
           <div class="col-lg-6">
-            <img src="images/style-images/styles (2).png" alt="" height="554px">
+            <img src="images/style-images/styles (2).png" alt="" height="554px" class="mw-100">
           </div>
           <div class="col-lg-6">
             <div class="row">
@@ -363,7 +363,7 @@
     </main>
 
 <!-- footer section start -->
-    <footer class="bg-dark p-2">
+    <footer class="bg-dark p-2 mt-4">
       <p class="text-center text-white">Copyright © 2022 . Look Fashion All rights reserved</p>
     </footer>
 
